v0.10.3 ()
  New features
    * The scope tracking system has been improved. It is now possible to know
	the original host of an imported resource, which helps a lot in case of
	resource clashes
	* is_virtual fact
	* new stdlib functions: flatten, str2bool, validate_absolute_path
  Bugs fixed
	* Deserialization problems with puppetDBs
	* Fixed several bugs with imported resources

v0.10.2 (2013/10/27)
  Bugs fixed
	* PVP support
  New features
	* Support for properly setting instance variables before computing
	templates with native Ruby.

v0.10.1 (2013/10/27)
  Bugs fixed
	* The TestDB file was never created.

v0.10.0 (2013/10/27)
  New features
	* Map/each/filter functions with lambdas (not really tested)
	* Rewrite of the PuppetDB API
	* The whole scope stack is kept with each Resource, for easier debugging
	* Inclusion of three PuppetDB backends : dummy (no effect), TestDB (stored
	in a YAML file) and Remote (standard PuppetDB API)
  Bugs fixed
	* This is a hack : variables declared in a parent (inheritance) can now be
	overriden. This is because inheritance is not handled like in Vanilla. As
	I do not really use inheritance, I am not sure if this is much of a
	breakage.

v0.9.0 (2013/08/15)
  Huge rewrite !
	* See http://lpuppet.banquise.net/blog/2013/08/15/version-0-dot-9-0-is-out-for-testing/

v0.4.2 (2013/06/01)
  New features
	* Functions 'values' and 'keys' from stdlib are now implemented.
	* hruby integration
  Bugs fixed

v0.4.0 (2013/05/16)
  New features
	* Big refactor of the PuppetDB API.
	* New "fake" PuppetDB used for testing
	* Support of the caller_module_name variable.
	* Support for a dumpvariable() function.
	* More details stored in the resource types, and in error messages.
	* User native type
	* Removal of the MissingH, filepath, monad-loop and directory dependency
	* Puppet booleans are now handled at parse stage
	* inline_template function
  Bugs fixed
	* fqdn_rand now puppet perfect (at least for 32 bit max values)