@@ -48,6 +48,7 @@ library
                        , PuppetDB.TestDB
                        , PuppetDB.Dummy
                        , PuppetDB.Common
+                       , Hiera.Server
   other-modules:       Text.Parser.Parsec
                        , Puppet.Utils
                        , Puppet.NativeTypes.File
@@ -112,6 +113,7 @@ library
                         , stm                  == 2.4.*
                         , hspec                >= 1.7.0  && <1.8.0
                         , yaml                 >= 0.8.0  && <0.9
+                        , lens-aeson           >= 0.1.2  && <0.2
 Test-Suite test-lexer
   hs-source-dirs: tests
   type:           exitcode-stdio-1.0
@@ -126,6 +128,14 @@ Test-Suite test-expr
   extensions:     OverloadedStrings
   build-depends:  language-puppet,base,text,parsec,vector,ansi-wl-pprint
   main-is:        expr.hs
+Test-Suite test-hiera
+  hs-source-dirs: tests
+  type:           exitcode-stdio-1.0
+  ghc-options:    -Wall -rtsopts -threaded
+  extensions:     OverloadedStrings
+  build-depends:  language-puppet,base,hspec,temporary,strict-base-types,HUnit,lens,vector,unordered-containers
+  main-is:        hiera.hs
+
 
 executable puppetresources
   hs-source-dirs:      progs
